--- a/JSON1.yml
+++ b/JSON1.yml
@@ -12,9 +12,9 @@
       win_shell: |
         try {
           $query = "SELECT DB_NAME(database_id) AS DatabaseName, (size * 8) / 1024 AS SizeMB FROM sys.master_files WHERE type = 0;"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate
+          Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate -ErrorAction Stop
         } catch {
-          Write-Output "Error: $_"
+          Write-Output "Error: $($_.Exception.Message)"
         }
       register: db_space
       ignore_errors: yes
@@ -23,9 +23,9 @@
       win_shell: |
         try {
           $query = "SELECT name, state_desc, recovery_model_desc FROM sys.databases;"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate
+          Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate -ErrorAction Stop
         } catch {
-          Write-Output "Error: $_"
+          Write-Output "Error: $($_.Exception.Message)"
         }
       register: db_health
       ignore_errors: yes
@@ -33,10 +33,10 @@
     - name: Check for Deadlocks
       win_shell: |
         try {
-          $query = "SELECT COUNT(*) AS Deadlocks FROM sys.dm_tran_locks WHERE request_status = 'WAIT';"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate
+          $query = "SELECT COUNT(*) AS Deadlocks FROM sys.dm_exec_requests WHERE blocking_session_id <> 0;"
+          Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate -ErrorAction Stop
         } catch {
-          Write-Output "Error: $_"
+          Write-Output "Error: $($_.Exception.Message)"
         }
       register: deadlocks
       ignore_errors: yes
@@ -45,51 +45,17 @@
       win_shell: |
         try {
           $query = "SELECT job_id, name, last_run_outcome, enabled FROM msdb.dbo.sysjobs;"
-          Invoke-Sqlcmd -Query $query -ServerInstance '{{ sql_instance }}' -Username '{{ sql_user }}' -Password '{{ sql_password }}' -TrustServerCertificate
+          Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate -ErrorAction Stop
         } catch {
-          Write-Output "Error: $_"
+          Write-Output "Error: $($_.Exception.Message)"
         }
       register: job_activities
       ignore_errors: yes
 
-    - name: Clean and Structure Results
-      set_fact:
-        db_space_clean: |
-          {% set result = db_space.stdout.splitlines() %}
-          {% for line in result %}
-            {% if line.strip() %}
-              - {{ line }}
-            {% endif %}
-          {% endfor %}
-          
-        db_health_clean: |
-          {% set result = db_health.stdout.splitlines() %}
-          {% for line in result %}
-            {% if line.strip() %}
-              - {{ line }}
-            {% endif %}
-          {% endfor %}
-
-        deadlocks_clean: |
-          {% set result = deadlocks.stdout.splitlines() %}
-          {% for line in result %}
-            {% if line.strip() %}
-              - {{ line }}
-            {% endif %}
-          {% endfor %}
-
-        job_activities_clean: |
-          {% set result = job_activities.stdout.splitlines() %}
-          {% for line in result %}
-            {% if line.strip() %}
-              - {{ line }}
-            {% endif %}
-          {% endfor %}
-
     - name: Display Structured Results
       debug:
         msg:
-          - "Database Space Utilization: {{ db_space_clean | default('No output') }}"
-          - "Database Health: {{ db_health_clean | default('No output') }}"
-          - "Deadlocks: {{ deadlocks_clean | default('No output') }}"
-          - "SQL Agent Job Activities: {{ job_activities_clean | default('No output') }}"
+          - "Database Space Utilization: {{ db_space.stdout_lines | default([]) }}"
+          - "Database Health: {{ db_health.stdout_lines | default([]) }}"
+          - "Deadlocks: {{ deadlocks.stdout_lines | default([]) }}"
+          - "SQL Agent Job Activities: {{ job_activities.stdout_lines | default([]) }}"
