--- a/trial.yml
+++ b/trial.yml
@@ -12,7 +12,7 @@
       win_shell: |
         try {
           $query = "SELECT DB_NAME(database_id) AS DatabaseName, (size * 8) / 1024 AS SizeMB FROM sys.master_files WHERE type = 0;"
-          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | Select-Object DatabaseName, SizeMB | ConvertTo-Json -Compress
+          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | Select-Object DatabaseName, SizeMB | ConvertTo-Json -Compress -Raw
           if (-not $result) { Write-Output '[]' } else { Write-Output $result }
         } catch {
           Write-Output '[]'
@@ -24,7 +24,7 @@
       win_shell: |
         try {
           $query = "SELECT name, state_desc, recovery_model_desc FROM sys.databases;"
-          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | Select-Object name, state_desc, recovery_model_desc | ConvertTo-Json -Compress
+          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | Select-Object name, state_desc, recovery_model_desc | ConvertTo-Json -Compress -Raw
           if (-not $result) { Write-Output '[]' } else { Write-Output $result }
         } catch {
           Write-Output '[]'
@@ -36,7 +36,7 @@
       win_shell: |
         try {
           $query = "SELECT COUNT(*) AS Deadlocks FROM sys.dm_tran_locks WHERE request_status = 'WAIT';"
-          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | Select-Object Deadlocks | ConvertTo-Json -Compress
+          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | Select-Object Deadlocks | ConvertTo-Json -Compress -Raw
           if (-not $result) { Write-Output '{"Deadlocks": 0}' } else { Write-Output $result }
         } catch {
           Write-Output '{"Deadlocks": 0}'
@@ -48,7 +48,7 @@
       win_shell: |
         try {
           $query = "SELECT job_id, name, last_run_outcome, enabled FROM msdb.dbo.sysjobs;"
-          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | Select-Object job_id, name, last_run_outcome, enabled | ConvertTo-Json -Compress
+          $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | Select-Object job_id, name, last_run_outcome, enabled | ConvertTo-Json -Compress -Raw
           if (-not $result) { Write-Output '[]' } else { Write-Output $result }
         } catch {
           Write-Output '[]'
@@ -68,7 +68,6 @@
             } | to_nice_json
           }}
 
-        - name: Display Clean JSON Output (AWX Compatible)
+    - name: Display Clean JSON Output (AWX Compatible)
       debug:
         var: result_json
-
