--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -6,7 +6,7 @@
     sql_instance: "10.112.0.10"
     sql_user: "{{ sql_user }}"
     sql_password: "{{ sql_password }}"
- 
+
   tasks:
     - name: Get Database Space Utilization
       win_shell: |
@@ -19,16 +19,11 @@
         }
       register: db_space
       ignore_errors: yes
- 
+
     - name: Get Database Health
       win_shell: |
         try {
-          $query = "SELECT db.name AS DatabaseName,db.state_desc AS Status, 
-                    (SELECT COUNT(*) FROM sys.dm_exec_requests r WHERE r.database_id = db.database_id) AS ActiveRequests,
-                    (SELECT COUNT(*) FROM sys.dm_exec_sessions s WHERE s.is_user_process = 1 AND s.database_id = db.database_id) AS ActiveUserConnections,
-                    (SELECT COUNT(*) FROM sys.dm_os_waiting_tasks w JOIN sys.dm_exec_sessions s ON w.session_id = s.session_id WHERE s.database_id = db.database_id) AS PendingRequests, 
-                    (SELECT COUNT(*) FROM sys.dm_os_performance_counters WHERE counter_name = 'Processor Queue Length') AS CPUQueueLength 
-                    FROM sys.databases db;"
+          $query = "SELECT db.name AS DatabaseName,db.state_desc AS Status, (SELECT COUNT(*) FROM sys.dm_exec_requests r WHERE r.database_id = db.database_id) AS ActiveRequests,(SELECT COUNT(*) FROM sys.dm_exec_sessions s WHERE s.is_user_process = 1 AND s.database_id = db.database_id) AS ActiveUserConnections,(SELECT COUNT(*) FROM sys.dm_os_waiting_tasks w JOIN sys.dm_exec_sessions s ON w.session_id = s.session_id WHERE s.database_id = db.database_id) AS PendingRequests, (SELECT COUNT(*) FROM sys.dm_os_performance_counters WHERE counter_name = 'Processor Queue Length') AS CPUQueueLength FROM sys.databases db;"
           $result = Invoke-Sqlcmd -Query "$query" -ServerInstance "{{ sql_instance }}" -Username "{{ sql_user }}" -Password "{{ sql_password }}" -TrustServerCertificate | ConvertTo-Json -Compress -Depth 3
           if (-not $result) { Write-Output '[]' } else { Write-Output $result }
         } catch {
@@ -36,7 +31,7 @@
         }
       register: db_health
       ignore_errors: yes
- 
+
     - name: Check for Deadlocks
       win_shell: |
         try {
@@ -48,7 +43,7 @@
         }
       register: deadlocks
       ignore_errors: yes
- 
+
     - name: Get SQL Agent Job Activities
       win_shell: |
         try {
@@ -65,19 +60,18 @@
         }
       register: job_activities
       ignore_errors: yes
- 
+
     - name: Convert Outputs to JSON
       set_fact:
-        final_output: >-
-          {{
-            {
-              "DatabaseSpaceUtilization": (db_space.stdout | from_json) if db_space.stdout is not none else [],
-              "DatabaseHealth": (db_health.stdout | from_json) if db_health.stdout is not none else [],
-              "Deadlocks": (deadlocks.stdout | from_json)[0]["Deadlocks"] | default(0) | int if deadlocks.stdout is not none else 0,
-              "SQLAgentJobActivities": (job_activities.stdout | from_json) if job_activities.stdout is not none else []
-            }
-          }}
+        db_space_fact: "{{ (db_space.stdout | from_json) if db_space.stdout is not none else [] }}"
+        db_health_fact: "{{ (db_health.stdout | from_json) if db_health.stdout is not none else [] }}"
+        deadlocks_fact: "{{ (deadlocks.stdout | from_json) if deadlocks.stdout is not none else {'Deadlocks': 0} }}"
+        job_activities_fact: "{{ (job_activities.stdout | from_json) if job_activities.stdout is not none else [] }}"
 
-    - name: Display JSON Output
+    - name: Display Formatted Results in JSON
       debug:
-        msg: "{{ final_output }}"
+        msg:
+          database_space_utilization: "{{ db_space_fact | default([]) }}"
+          deadlocks: "{{ deadlocks_fact | default({'Deadlocks': 0}) }}"
+          job_activities: "{{ job_activities_fact | default([]) }}"
+          database_health_check: "{{ db_health_fact | default([]) }}"
