--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -56,20 +56,53 @@
         }
       register: job_activities
       ignore_errors: yes
-    - name: Debug Raw Outputs
+    - name: Convert Outputs to JSON
+      set_fact:
+        db_space_fact: "{{ (db_space.stdout | from_json) if db_space.stdout is not none else [] }}"
+        db_health_fact: "{{ (db_health.stdout | from_json) if db_health.stdout is not none else [] }}"
+        deadlocks_fact: "{{ (deadlocks.stdout | from_json) if deadlocks.stdout is not none else {'Deadlocks': 0} }}"
+        job_activities_fact: "{{ (job_activities.stdout | from_json) if job_activities.stdout is not none else [] }}"
+    - name: Display Formatted Results
       debug:
-        msg:
-          db_space_raw: "{{ db_space.stdout }}"
-          db_health_raw: "{{ db_health.stdout }}"
-          deadlocks_raw: "{{ deadlocks.stdout }}"
-          job_activities_raw: "{{ job_activities.stdout }}"
-
-    - name: Display Formatted Results in JSON
-      debug:
-        msg:
-          database_space_utilization: "{{ db_space_fact | default([]) }}"
-          deadlocks: "{{ deadlocks_fact | default({'Deadlocks': 0}) }}"
-          job_activities: "{{ job_activities_fact | default([]) }}"
-          database_health_check: "{{ db_health_fact | default([]) }}"
-
-      
+        msg: |
+          📊 Database Space Utilization:
+          {% for item in db_space_fact | default([]) if item.DatabaseName is defined and item.SizeMB is defined %}
+           - {{ item.DatabaseName }}: {{ item.SizeMB }} MB
+          {% endfor %}
+          🚨 Deadlocks:
+          {% if (deadlocks_fact.Deadlocks | default(0) | int) > 0 %}
+           - {{ deadlocks_fact.Deadlocks }} deadlocks detected!
+          {% else %}
+           - No deadlocks detected
+          {% endif %}
+          [ℹ️] Job activities query returned {{ job_activities_fact | default([]) | length }} rows.
+          🛠 SQL Server Agent Job Activities:
+          {% if job_activities_fact.name is defined and job_activities_fact.enabled is defined and job_activities_fact.last_run_status is defined %}
+           - Job: {{ job_activities_fact.name }} | Enabled: {{ job_activities_fact.enabled }} | Last Outcome: 
+             {% if job_activities_fact.last_run_status | default(-1) == 1 %}
+               Succeeded
+             {% elif job_activities_fact.last_run_status | default(-1) == 0 %}
+               Failed
+             {% elif job_activities_fact.last_run_status | default(-1) == 2 %}
+               Retry
+             {% elif job_activities_fact.last_run_status | default(-1) == 3 %}
+               Canceled
+             {% else %}
+               Unknown
+             {% endif %}
+          {% else %}
+            [❌] No job activities found or missing required fields.
+          {% endif %}
+          🩺 Database Health Check:
+          {% if db_health_fact is defined and db_health_fact | length > 0 %}
+            {% for item in db_health_fact | default([]) %}
+               - Database: {{ item.DatabaseName | default([]) }}
+                 - Status: {{ item.Status | default([]) }}
+                 - Active Requests: {{ item.ActiveRequests | default(0) }}
+                 - Active User Connections: {{ item.ActiveUserConnections | default(0) }}
+                 - Pending Requests: {{ item.PendingRequests | default(0) }}
+                 - CPU Queue Length: {{ item.CPUQueueLength | default(0) }}
+            {% endfor %}
+          {% else %}
+            [❌] No database health data available.
+          {% endif %}
